name:                Gomoku
version:             0.1.0.0
synopsis:            Gomoku (5-in-a-row) game
-- description:         
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006-APP
author:              Edwin Brady
maintainer:          ecb10@st-andrews.ac.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gomoku
  main-is:             Main.hs
  Other-modules:       GameWorld, Input, Draw, AI
  build-depends:       base >=4.6 && <4.9,
                       gloss,
                       MissingH,
                       cereal,
                       either-unwrap,
                       bytestring == 0.10.4.0,
                       network,
                       split,
                       Unique
  hs-source-dirs:      src
  default-language:    Haskell2010
